force-app/main/default/objects/IT_Inventory__c/IT_Inventory__c.object-meta.xml
<CustomObject>
    <label>IT Inventory</label>
    <nameField>
        <label>IT Inventory Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>IT Inventories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>