force-app/main/default/objects/IT_Inventory__c/fields/Encrypted__c.field-meta.xml
<CustomField>
    <fullName>Encrypted__c</fullName>
    <label>Encrypted</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>YES</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>