force-app/main/default/objects/IT_Inventory__c/fields/Life_Cycle__c.field-meta.xml
<CustomField>
    <fullName>Life_Cycle__c</fullName>
    <label>Life Cycle</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Mid-Warranty</fullName>
            </value>
            <value>
                <fullName>Close to Warranty Expiration</fullName>
            </value>
            <value>
                <fullName>Warranty Expired</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>