force-app/main/default/objects/IT_Inventory__c/fields/Purchase_date__c.field-meta.xml
<CustomField>
    <fullName>Purchase_date__c</fullName>
    <label>Purchase date</label>
    <type>Date</type>
</CustomField>