force-app/main/default/objects/IT_Inventory__c/fields/Retail_value__c.field-meta.xml
<CustomField>
    <fullName>Retail_value__c</fullName>
    <label>Retail value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>