force-app/main/default/objects/IT_Inventory__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New – In Stock</fullName>
            </value>
            <value>
                <fullName>Assigned</fullName>
            </value>
            <value>
                <fullName>Spare</fullName>
            </value>
            <value>
                <fullName>Donated</fullName>
            </value>
            <value>
                <fullName>Scrapped</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>