force-app/main/default/objects/IT_Inventory__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Make__c</columns>
    <columns>Type__c</columns>
    <columns>Model__c</columns>
    <columns>Description__c</columns>
    <columns>Encrypted__c</columns>
    <columns>Life_Cycle__c</columns>
    <columns>Payment_method__c</columns>
    <columns>Status__c</columns>
    <columns>Retail_value__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>